--- a/src/perception/package.xml
+++ b/src/perception/package.xml
@@ -49,7 +49,7 @@
   <run_depend>pcl_ros</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
-  <run-depend>libpcl-all</run_depend>
+  <run_depend>libpcl-all</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
