--- a/src/perception/CMakeLists.txt
+++ b/src/perception/CMakeLists.txt
@@ -203,3 +203,6 @@ target_link_libraries(view_cloud ${catkin_LIBRARIES})
 
 add_executable(view_circle src/view_circle.cpp)
 target_link_libraries(view_circle ${catkin_LIBRARIES})
+
+add_executable(average_bowl_pos src/average_bowl_pos.cpp)
+target_link_libraries(average_bowl_pos ${catkin_LIBRARIES})
