--- a/src/manipulation/CMakeLists.txt
+++ b/src/manipulation/CMakeLists.txt
@@ -186,3 +186,6 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(move_to_bowl src/move_to_bowl.cpp)
+target_link_libraries(move_to_bowl ${catkin_LIBRARIES})
