--- a/src/perception/package.xml
+++ b/src/perception/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The perception package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="um10kh@todo.todo">um10kh</maintainer>
@@ -45,11 +45,14 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>libpcl-all</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>libpcl-all</run_depend>
+  <run_depend>message_runtime</run_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
