--- a/src/perception/CMakeLists.txt
+++ b/src/perception/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   sensor_msgs
   message_generation
+  rospy
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,10 +54,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
+#add_service_files(
 #  FILES
-#  RequestBowlPos.srv
-# )
+#  RequestSweetInfo.srv
+#)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -66,10 +67,12 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   sensor_msgs
-# )
+#generate_messages(
+#  DEPENDENCIES
+#  std_msgs
+#  geometry_msgs
+#)
+
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
