--- a/src/manipulation/CMakeLists.txt
+++ b/src/manipulation/CMakeLists.txt
@@ -49,8 +49,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 # add_message_files(
 #   FILES
-#   Message1.msg
-#   Message2.msg
+#   reset_bowl.msg
 # )
 
 ## Generate services in the 'srv' folder
@@ -58,6 +57,8 @@ add_service_files(
   FILES
   RequestBowlPos.srv
   RequestSweetInfo.srv
+  LookForSweets.srv
+  LookForBowl.srv
 )
 
 ## Generate actions in the 'action' folder
