Introduced a lot more integration and improvements - sweet colour detection/collision avoidance, person detection, more testing etc.

--- a/src/manipulation/CMakeLists.txt
+++ b/src/manipulation/CMakeLists.txt
@@ -59,6 +59,7 @@ add_service_files(
   RequestSweetInfo.srv
   LookForSweets.srv
   LookForBowl.srv
+  VoiceRequest.srv
 )
 
 ## Generate actions in the 'action' folder
